# AMPEL360-BWB-H2-Hy-E

./: .gitignore  .licenserc.yaml  AI-ASI-TP.md  AMPEL360_ASSETS_STANDARD.md  AMPEL360_DOCUMENTATION_STANDARD.md  ATA_03_NUMBERING_GUIDE.md  CAOS_INDEX.md  CAOS_USE_CASES.md  CGEN_CI_CD_GUIDE.md  COPILOT_INSTRUCTIONS_SUMMARY.md  DIGITAL_TWIN_CONTROL_LOOP.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_CGEN_CI_CD.md  OPT-IN_FRAMEWORK_STANDARD.md  OPTIN_FRAMEWORK_STRUCTURE.md  POLICY_OPEN_SOURCE.md  README.md  STRUCTURE_OVERVIEW.txt  THIRD_PARTY_NOTICES.md  requirements.txt
.github/: copilot.md  dependabot.yml
06_ENGINEERING/: Analysis_Standards_Applied.csv  Engineering_Analysis_Overview.md  README.md
CAOS/: AMPEL360-FAirCCC-ARCH-001_Federated_Aircraft_Cloud_Computing_Campus.md  CAOS_INDEX.md  CAOS_MANIFESTO.md  CAOS_OPERATIONS_FRAMEWORK.md
I-INFRASTRUCTURES/: README.md
N-NEURAL_NETWORKS_USERS_TRACEABILITY/: README.md
O-ORGANIZATION/: README.md
OPT-IN_FRAMEWORK/: ATA_CHAPTER_INDEX.md  NUMBERING_RULES.md  QUICK_START.md  README.md  SECURITY_SUMMARY.md
P-PROGRAM/: README.md
T-TECHNOLOGY_AMPEDEOPELLICCIA-ON_BOARD_SYSTEMS/: README.md
cd/: README.md
docs/: COPILOT_SETUP_GUIDE.md
mcp-pr-memory/: .gitignore  README.md  docker-compose.yml  requirements.txt
tools/: README.md  check_dimensions.py  create_release_bundle.py  enhance_overview_readmes.py  generate_summary_tables.py  (+2 more)
tools/validators/: README.md  __init__.py  ci_validator.py  drawing_validator.py  pyproject.toml  structure_validator.py
tools/validators/validators/: __init__.py
(+22372 files in other folders)
